# contract

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: price-architect.md  price-backend.md  price-tester.md
config/: field_mapping.yaml  settings.yaml.example  template_rules.yaml
config/template_metadata/: templates.yaml
deploy/docker/: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.remote.yml  docker-compose.yml  nginx.conf  nginx.prod.conf
docs/: workflow.md  运维手册.md
docs/E9Data/: UF_CPKXMJC.md  UF_CPXF.md  UF_CPZWH.md  UF_CRMKHKP.md  UF_HTJGGL.md  UF_HTJGKST.md  UF_HTJGKST_DT1.md  UF_JYTC.md  UF_PP.md  UF_SAPCPLBQD.md  UF_YXZXHTGHJLXBN.md  WORKFLOW_REQUESTBASE.md  entity-summary.md
docs/RestfulDocumentation/: index.html
docs/deployment/: docker-deployment.md  remote-deployment.md
docs/feature/: engineer_responsibilities.md  feature_list.md  zip_download.md
docs/plan/: implementation_plan.md
docs/template/: 价格库清单.xlsx  价格模板规则-更新2026306.xlsx
scripts/: check_mappings.py  check_pricing.py  convert_rules.py  test_weaver_api.py  test_word_generation.py  verify_db.py
src/: main.py
src/api/: router.py  schemas.py
src/config/: __init__.py  settings.py  template_loader.py
src/database/: __init__.py  config.py  connection.py  health.py
src/exceptions/: __init__.py  api.py  base.py  config.py  database.py  document.py  template.py
src/fillers/: constants.py  data_filler.py  format_preserver.py  row_expander.py  (+1 more)
tests/: conftest.py
(+155 files in other folders)
